2017.4/_sources/plugins/available/feature-classifier/index.txt
feature-classifier
==================

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	No description available. See plugin website: <a href="https://github.com/qiime2/q2-feature-classifier">https://github.com/qiime2/q2-feature-classifier</a><br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.4.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/qiime2/q2-feature-classifier">https://github.com/qiime2/q2-feature-classifier</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           No user support information available. See plugin website: <a href="https://github.com/qiime2/q2-feature-classifier">https://github.com/qiime2/q2-feature-classifier</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           No citation available. Cite plugin website: <a href="https://github.com/qiime2/q2-feature-classifier">https://github.com/qiime2/q2-feature-classifier</a><br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   classify_consensus_blast
   
   classify_consensus_vsearch
   
   classify_sklearn
   
   extract_reads
   
   fit_classifier_naive_bayes
   
   fit_classifier_sklearn
   


Visualizers
-----------


This plugin does not have any visualizers.
