2017.5/_sources/plugins/available/feature-classifier/index.txt
feature-classifier
==================

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	This QIIME 2 plugin supports taxonomic classification of features using a variety of methods, including Naive Bayes, vsearch, and BLAST+.<br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.5.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/qiime2/q2-feature-classifier" rel="noopener">https://github.com/qiime2/q2-feature-classifier</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           Please post to the QIIME 2 forum for help with this plugin: <a href="https://forum.qiime2.org" rel="noopener">https://forum.qiime2.org</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           No citation available. Cite plugin website: <a href="https://github.com/qiime2/q2-feature-classifier" rel="noopener">https://github.com/qiime2/q2-feature-classifier</a><br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   classify_consensus_blast
   
   classify_consensus_vsearch
   
   classify_sklearn
   
   extract_reads
   
   fit_classifier_naive_bayes
   
   fit_classifier_sklearn
   


Visualizers
-----------


This plugin does not have any visualizers.
